      transitive reductions being incompletely reduced (i.e. some
      indirect property instances were being incorrectly reported as
      being direct).
    o Added "drop" operator as an alternative to "remove" when performing
      non-mononitic rewrites.
    o Fixed bug in rebind/reset of infgraphs which use TGC and failed to 
      reset the transitive engine.
      
;;; -- end post2.2final change list -------------------------------------


MySQL
-----
There is a problem when using MySQL j-connection 3.1.* and MySQL 4.1.*.
It manifests itself as truncation of long literals.  Systems not using long
literals should not see any problem.  Using j-connector 3.0.* or the
development versions of j-connector 3.2 do not exhibit the problem.

Post 2.2beta change list


  ARP
      o Fixed XMLLiteral bug relevant to OWL-S
      o Added workaround for ICU bug.
        The workaround may slow processing of Tamil and other langauges
        which use Unicode composing characters. If you are processing
        large volumes of Tamil using a patched version of icu4j may be
        faster. Ask on jena-dev for more information.
      o Improved character encoding support: all character encodings
        supported by Java are now supported by Jena.

  FileGraph and ModelMakerImpl
      o ModelMakerImpl now implements [the obsolescent] createModelOver
        using maker.openModel( ... ) rather than .createModel( ... ). This
        fixes a problem with existing files in the directory not being
        consulted for their contents.

      o FileGraphs now (weakly) support (non-nested) transactions, using
        checkpoint files to record their state at a begin() and restoring
        that state at an abort(). A commit() writes the current state to
        the backing file and deletes the checkpoint.

  InfModelBase (hence, any inference model)
      o Inference models now (weakly) support transactions; they delegate them to